vlib/v/checker/tests/selector_generic_or_block_err.vv
struct Foo[T] {
pub:
	value ?T
}

fn (f Foo[T]) str() string {
	value := f.value or { 'this should be a checker error' }
	return '${value}'
}

fn main() {
	bar := Foo[int]{
		value: 0
	}

	println(bar)
}
